--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,7 @@
                     </div>
                     {% include features.html %}
                     {% include footer.html %}
+                    {% include pressreviews.html %}
                     {% include appstoreimages.html %}
                 </div>
             </div>
