--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <img class="appIconLarge" src="{{ site.app_icon | relative_url }}">
+                            <!-- <img class="appIconLarge" src="{{ site.app_icon | relative_url }}"> -->
+                            <img class="appIconLarge" src="/assets/icon.png">
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
