--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
                                 </defs>
                             </svg>
                             <!-- <img class="appIconLarge" src="{{ site.app_icon | relative_url }}"> -->
-                            <img class="appIconLarge" src="/assets/Icon.png">
+                            <img class="appIconLarge" src="/blob/master/assets/Icon.png">
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
