--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <!-- <img class="appIconLarge" src="{{ site.app_icon | relative_url }}"> -->
-                            <img class="appIconLarge" src="https://github.com/sonasapps/hellothere/blob/master/assets/Icon.png">
+                            <img class="appIconLarge" src="{{ site.app_icon | relative_url }}">
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
