--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -469,6 +469,106 @@ nav > ul li a:active {
 } 
 
 
+// Press Review List
+ .separator {
+ 	width: 75%;
+ 	margin: auto;
+ 	background-color: whitesmoke;
+ 	border: none;
+ 	height: 2px;
+ }
+
+ .pressreviews {
+ 	grid-area: pr;
+ 	display: flex;
+ 	flex: 0 1 auto;
+ 	align-content: flex-start;
+ 	justify-content: flex-start;
+ 	flex-grow: 1;
+ 	flex-wrap: wrap;
+ 	margin-top: 93px;
+ }
+
+ .pressreviewHeader {
+ 	width: 100%;
+ 	text-align: center;
+ 	padding-top: 64px;
+ 	padding-bottom: 64px;
+ }
+
+ .pressreview {
+ 	display: flex;
+ 	/*padding-top: 63px;*/
+ 	padding-left: 15px;
+ 	padding-right: 15px;
+ 	width: calc(100%/2);
+ }
+
+ .pressreview:nth-child(-n+3) {
+     padding-top: 0px;   
+ }
+
+ .pressreview:nth-child(3n) {
+ 	padding-right: 0px;
+ }
+
+ .pressreview:nth-child(3n+1) {
+ 	padding-left: 0px;
+ }
+
+ .pressreviewText {
+ 	margin-left: 18px;
+ 	text-align: center;
+ 	line-height: 1.5;
+ }
+
+ .pressreviewText > h3 {
+ 	color: $feature-title-color;
+ 	margin-top: 12px;
+ }
+
+ .pressreviewText > p {
+ 	color: $feature-text-color;
+ 	margin-top: 8px;
+ 	/*line-height: 1.5;*/
+ }
+
+ @media only screen and (max-width: 550px) {
+
+ 	.pressreviews {
+ 		flex-grow: 1;
+ 		flex-direction: row;
+ 		flex-wrap: wrap;
+ 		margin-top: 11px;
+ 	}
+
+ 	.pressreview {
+ 		display: flex;
+ 		padding-top: 41px;
+ 		padding-left: 0px;
+ 		padding-right: 0px;
+ 		width: 100%;
+ 	}
+
+ 	.pressreview:nth-child(-n+3) {
+ 		padding-top: 41px;   
+ 	}
+
+ 	.pressreview:nth-child(1) {
+ 		padding-top: 0px;   
+ 	}
+
+ 	.pressreview:nth-child(3n) {
+ 		padding-right: 0px;
+ 	}
+
+ 	.pressreview:nth-child(3n+1) {
+ 		padding-left: 0px;
+ 	}
+
+ } 
+
+
 // Feature List
 
 .features {
