--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -45,6 +45,7 @@
 		"h h h h h h h h h h h h"
 		"p p p p p i i i i i i i"
 		"c c c c c c c c c c c c"
+		"pr pr pr pr pr pr pr pr pr pr pr pr"
 		"f f f f f f f f f f f f";
 }
 
@@ -71,6 +72,7 @@
 			"i i i i i i i i i i i i"
 			"p p p p p p p p p p p p"
 			"c c c c c c c c c c c c"
+			"pr pr pr pr pr pr pr pr pr pr pr pr"
 			"f f f f f f f f f f f f";
 	}
 }
@@ -468,7 +470,6 @@ nav > ul li a:active {
 	
 } 
 
-
 // Press Review List
  .separator {
  	width: 75%;
@@ -771,8 +772,8 @@ footer {
 		line-height: 1.5;
 		width: 100%;
 		text-align: center;
-		padding-top: 54px;
-		padding-bottom: 61px;
+		/*padding-top: 54px;*/
+		/*padding-bottom: 61px;*/
 	}
 	
 	.footerIcons {
