--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,8 @@
 				<li><a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a></li>
 				{% endif %}
 			{% endfor %}
+			<!-- Add the link to vmware.com before the "Press Kit" link -->
+			<li><a href="https://thatvirtualboy.com/23-advertise-with-raktech-apps/" target="_blank">Advertise</a></li>
 			{% if site.presskit_download_link %}
 				<li><a href="{{ site.presskit_download_link }}">Press Kit</a></li>
 			{% endif %}
